Fix selectable text link not showing pointer cursor

--- a/css/flat-remix.css
+++ b/css/flat-remix.css
@@ -64,7 +64,7 @@ a:link, a:visited, a:active {
     cursor: pointer;
 }
 
-a * { cursor: pointer; }
+a * { cursor: pointer!important; }
 
 a:hover { text-decoration: underline}
 
